--- a/build-ok-web/index.html
+++ b/build-ok-web/index.html
@@ -6,7 +6,7 @@
             
             #midPanel {
                 width: 100%;
-                height:calc(100% - 100px);
+                height:calc(100%);
                 position: absolute;
                 top:0;
                 left: 0;
@@ -24,11 +24,12 @@
                 height: 100%;
                 outline: #1A2129 5px solid;
                 
-            }
+            }/*
             #botPanel {
                 width: 100%;
                 top:calc(100% - 100px);
                 height:100px;
                 position: absolute;
                 left: 0;
-            }</style><script>window.CURRENT_GAME_PLATFORM = 'OK';</script><script src="//api.ok.ru/js/fapi5.js"></script><script src="build1728127659117.js"></script><div id="midPanel"><div id="gameBlock"></div></div><div id="botPanel"></div><div id="turn"></div></body></html><html></html>
+            }
+            */</style><script>window.CURRENT_GAME_PLATFORM = 'OK';</script><script src="//api.ok.ru/js/fapi5.js"></script><script src="build1728214882345.js"></script><div id="midPanel"><div id="gameBlock"></div></div><div id="botPanel"></div><div id="turn"></div></body></html><html></html>
