--- a/build-ok-web/index.html
+++ b/build-ok-web/index.html
@@ -1,4 +1,4 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"/><link rel="shortcut icon" href="favicon.ico" type="image/x-icon"><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover"><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><meta name="keywords" content="game,puzzle"/><meta http-equiv="X-UA-Compatible" content="ie=edge"/><meta name="description" content="Puzzle:The path to color"/><title>Puzzle:The path to color</title></head><body><style>body {
+<!doctype html><html lang="en" oncontextmenu="return false"><head><meta charset="UTF-8"/><link rel="shortcut icon" href="favicon.ico" type="image/x-icon"><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover"><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><meta name="keywords" content="game,puzzle"/><meta http-equiv="X-UA-Compatible" content="ie=edge"/><meta name="description" content="Puzzle:The path to color"/><title>Puzzle:The path to color</title></head><body><style>body {
                 margin: auto;
                 padding: auto;
                 background: linear-gradient(white, 20%, gray);
@@ -32,4 +32,4 @@
                 position: absolute;
                 left: 0;
             }
-            */</style><script>window.CURRENT_GAME_PLATFORM = 'OK';</script><script src="//api.ok.ru/js/fapi5.js"></script><script src="build1733840103691.js"></script><div id="midPanel"><div id="gameBlock"></div></div><div id="botPanel"></div><div id="turn"></div></body></html><html></html>
+            */</style><script>window.CURRENT_GAME_PLATFORM = 'OK';</script><script src="//api.ok.ru/js/fapi5.js"></script><script src="build1734679102281.js"></script><div id="midPanel"><div id="gameBlock"></div></div><div id="botPanel"></div><div id="turn"></div></body></html><html></html>
