--- a/build-ok-web/index.html
+++ b/build-ok-web/index.html
@@ -32,4 +32,4 @@
                 position: absolute;
                 left: 0;
             }
-            */</style><script>window.CURRENT_GAME_PLATFORM = 'OK';</script><div id="midPanel"><div id="gameBlock"></div></div><div id="botPanel"></div><div id="tap"></div><div id="turn"></div><script src="//api.ok.ru/js/fapi5.js"></script><script src="build1765028583109.js"></script></body></html><html></html>
+            */</style><script>window.CURRENT_GAME_PLATFORM = 'ok';</script><div id="midPanel"><div id="gameBlock"></div></div><div id="botPanel"></div><div id="tap"></div><div id="turn"></div><script src="//api.ok.ru/js/fapi5.js"></script><script src="build1765826451956.js"></script></body></html><html></html>
